--- a/nba.css
+++ b/nba.css
@@ -63,43 +63,38 @@ header {
   height: 70px;
   top: 0;
   background-color: rgba(0,0,0,.3);
-  /*border: 1px solid white;*/
 } 
 footer {
   width: 100%;
   height: 70px;
   bottom: 0;
   background-color: rgba(0,0,0,.3);
-  /*border: 1px solid white;*/
   position: absolute;
 }
 p {
   color: white;
 }
-.progress {
+.question-number {
+  margin-left: 180px;
+  margin-top: 20px;
   display: block;
   text-align: center;
   position: absolute;
   vertical-align: middle;
   color: white;
-  margin-right: 
 }
 li {
   margin: 0 auto;
   display: block;
   float: right;
   text-align: center;
-  margin-left: 20px;
+  margin-left: 80px;
   font-size: 25px;
   font-family: Garamond;
+  border: 2px solid white;
+  padding: 3px;
+  background-color: black;
 }
-/*.question-number {
-  position: absolute;
-  font-size: 36px;
-  font-family: Garamond;
-  font-weight: bold;
-  margin: 0 auto;
-}*/
 a.button{ 
     background: transparent;
     border-radius: 5px;
@@ -157,6 +152,74 @@ a.button:active{
   text-align: center;
   width: 300px;
 }
+.Percentage {
+  position: absolute;
+  left: 0;
+  font-size: 65px;
+  font-family: Garamond;
+  width: 150px;
+  margin-top: 250px;
+  margin-left: 123px;
+  text-align: center;
+  height: 65px;
+  background: transparent;
+  text-decoration: none;
+  text-shadow:0px 1px 0px #fff;
+  border:1px solid #a7a7a7;
+  box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition:box-shadow 0.5s;
+  text-align: center;
+  display: block;
+  font-family: arial;
+  font-weight: bold;
+  color: white;
 
-
+}
+.grade {
+  color: white;
+}
+.progress {
+  position: absolute;
+  left: 0;
+  width: 200px;
+  height: 40px;
+  padding: 4px;
+  font-size: 35px;
+  font-family: Garamond;
+  margin-top: 180px;
+  margin-left: 96px;
+  color: white;
+  background: transparent;
+  text-decoration: none;
+  text-shadow:0px 1px 0px #fff;
+  border:1px solid #a7a7a7;
+  box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition:box-shadow 0.5s;
+  text-align: center;
+  display: block;
+  font-family: arial;
+  font-weight: bold;
+  color: white;
+}
+.progress:hover{
+    background: white;
+    color: black;
+    box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+  }
+.progress:active{
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
+    background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
+  }
+.Percentage:hover{
+    background: white;
+    color: black;
+    box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+  }
+.grade:hover {
+  color:black;
+}  
+.Percentage:active{
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
+    background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
+  }
 
