--- a/nba.css
+++ b/nba.css
@@ -74,6 +74,7 @@ footer {
 p {
   color: white;
 }
+/*my first version
 .question-number {
   margin-left: 180px;
   margin-top: 20px;
@@ -89,6 +90,23 @@ li {
   float: right;
   text-align: center;
   margin-left: 80px;
+  font-size: 25px;
+  font-family: Garamond;
+  border: 2px solid white;
+  padding: 3px;
+  background-color: black;
+}*/
+.question-number {
+  margin-top: 20px;
+  display: block;
+  text-align: center;
+  position: absolute;
+  color: white;
+  width: 100%;
+}
+li {
+  display: inline-block;
+  margin-right: 25px;
   font-size: 25px;
   font-family: Garamond;
   border: 2px solid white;
@@ -127,9 +145,9 @@ a.button:active{
     background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
   }
 .answer-choices {
-    right: 115px;
-    margin-top: 180px;
-    position: absolute;
+  right: 115px;
+  margin-top: 180px;
+  /*position: absolute;*/
   }
 .title {
     color: white;
@@ -142,25 +160,25 @@ a.button:active{
 .question {
   margin-top: 125px;
   margin-right: 75px;
-  position: absolute;
+  /*position: absolute;*/
   right: 0;
   font-size: 24px;
   font-family: Garamond;
   font-weight: bold;
-  width: 320px;
+  /*width: 320px;*/
   border: 1px solid white;
   text-align: center;
-  width: 300px;
+  /*width: 300px;*/
 }
 .Percentage {
-  position: absolute;
+  /*position: absolute;*/
   left: 0;
   font-size: 65px;
-  font-family: Garamond;
+  /*font-family: Garamond;*/
   width: 150px;
   margin-top: 250px;
-  margin-left: 123px;
-  text-align: center;
+  /*margin-left: 123px;
+  text-align: center;*/
   height: 65px;
   background: transparent;
   text-decoration: none;
@@ -179,16 +197,16 @@ a.button:active{
   color: white;
 }
 .progress {
-  position: absolute;
+  /*position: absolute;*/
   left: 0;
   width: 200px;
   height: 40px;
   padding: 4px;
   font-size: 35px;
-  font-family: Garamond;
+  /*font-family: Garamond;*/
   margin-top: 180px;
   margin-left: 96px;
-  color: white;
+  /*color: white;*/
   background: transparent;
   text-decoration: none;
   text-shadow:0px 1px 0px #fff;
@@ -205,21 +223,34 @@ a.button:active{
     background: white;
     color: black;
     box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
-  }
+}
 .progress:active{
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
     background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
-  }
+}
 .Percentage:hover{
     background: white;
     color: black;
     box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
-  }
+}
 .grade:hover {
   color:black;
 }  
-.Percentage:active{
+.Percentage:active {
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
     background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
-  }
-
+}
+.container-questions{
+  outline: 2px solid white;
+  width: 35%;
+  display: inline-block;
+  right: 0;
+  position: absolute;
+}
+.container-progress {
+  outline: 2px solid white;
+  width: 35%;
+  display: inline-block;
+  left: 0;
+  position: absolute;
+}
