--- a/nba.css
+++ b/nba.css
@@ -1,7 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
-  License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -144,11 +140,6 @@ a.button:active{
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
     background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
   }
-.answer-choices {
-  right: 115px;
-  margin-top: 180px;
-  /*position: absolute;*/
-  }
 .title {
     color: white;
     text-align: center;
@@ -158,27 +149,17 @@ a.button:active{
     margin-top: 10px;
   }
 .question {
-  margin-top: 125px;
-  margin-right: 75px;
-  /*position: absolute;*/
-  right: 0;
+  margin: 170px auto 40px auto;
   font-size: 24px;
   font-family: Garamond;
   font-weight: bold;
-  /*width: 320px;*/
   border: 1px solid white;
   text-align: center;
-  /*width: 300px;*/
 }
 .Percentage {
-  /*position: absolute;*/
-  left: 0;
+  margin: 0 auto;
   font-size: 65px;
-  /*font-family: Garamond;*/
   width: 150px;
-  margin-top: 250px;
-  /*margin-left: 123px;
-  text-align: center;*/
   height: 65px;
   background: transparent;
   text-decoration: none;
@@ -197,16 +178,11 @@ a.button:active{
   color: white;
 }
 .progress {
-  /*position: absolute;*/
-  left: 0;
+  margin: 170px auto 37px auto;
   width: 200px;
   height: 40px;
   padding: 4px;
   font-size: 35px;
-  /*font-family: Garamond;*/
-  margin-top: 180px;
-  margin-left: 96px;
-  /*color: white;*/
   background: transparent;
   text-decoration: none;
   text-shadow:0px 1px 0px #fff;
@@ -253,4 +229,18 @@ a.button:active{
   display: inline-block;
   left: 0;
   position: absolute;
+}
+.hidden {
+  display: none;
+}
+@media (min-width: 320px) and (max-width: 480px) {
+  body {
+    color: cyan;
+  }
+  .container-questions {
+    outline: 10px solid red;
+  }
+  .container-questions, .container-progress {
+    position: static;
+  }
 }
